--- a/app/src/main/res/layout/list_detail_detail.xml
+++ b/app/src/main/res/layout/list_detail_detail.xml
@@ -18,7 +18,7 @@
                 android:gravity="center"
                 style="@style/Widget.PicassoSample.DescriptionUrl"
         />
-        <view class="com.android.home.picasso.PicassoGridViewActivity$SquaredImageView"
+        <view class="com.android.home.picasso.SquaredImageView"
                 android:id="@+id/photo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
