--- a/app/src/main/res/layout/universal_music_player.xml
+++ b/app/src/main/res/layout/universal_music_player.xml
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            app:headerLayout="@layout/nav_header_random_music"
+            app:headerLayout="@layout/nav_header"
             app:menu="@menu/drawer_random_music"/>
 
 
