--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -273,4 +273,20 @@
         <item name="android:maxLines">5</item>
     </style>
 
+    <style name="thin.white" parent="@android:style/TextAppearance">
+        <item name="android:fontFamily">sans-serif-thin</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+    <style name="thin.white.large" parent="thin.white">
+        <item name="android:textSize">24sp</item>
+    </style>
+    <style name="thin.white.small" parent="thin.white">
+        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="thin.white.small.button" parent="thin.white.small">
+        <item name="android:layout_width">48dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+
 </resources>
