--- a/app/src/main/res/layout/two_textview_layout.xml
+++ b/app/src/main/res/layout/two_textview_layout.xml
@@ -24,6 +24,7 @@
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@android:id/text1" android:layout_marginStart="8dp"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginEnd="8dp"/>
+                android:layout_marginEnd="8dp"
+                app:layout_constraintHorizontal_bias="0.0"/>
 
 </android.support.constraint.ConstraintLayout>
