--- a/app/src/main/res/layout/basic_sync_adapter.xml
+++ b/app/src/main/res/layout/basic_sync_adapter.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        tools:context=".syncadapter.BasicSyncAdapter"
+        tools:context=".syncadapter.BasicSyncActivity"
         tools:layout="@android:layout/list_content"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"/>
