--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -42,6 +42,7 @@
     </androidx.cardview.widget.CardView>
     <ListView
         android:id="@+id/list_view"
+        android:paddingLeft="8dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
