--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="calendar_date_banner_background">#FFEEEEEE</color>
+
     <color name="preset_button_background">@android:color/transparent</color>
     <color name="preset_button_background_selected">#66000000</color>
 
