--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
+    <style name="CalendarTheme" parent="@style/Base.AppTheme">
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+    <style name="CalendarTheme.WithToolbar" parent="@style/Base.AppTheme">
+
+    </style>
+
     <style name="Base.AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
