--- a/app/src/main/res/layout/activity_calculator_port.xml
+++ b/app/src/main/res/layout/activity_calculator_port.xml
@@ -7,5 +7,24 @@
 
     <include layout="@layout/display" />
 
+    <com.android.home.calculator.CalculatorPadViewPager
+            android:id="@+id/pad_pager"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="0dip"
+            android:overScrollMode="never">
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <include layout="@layout/pad_numeric" />
+            <include layout="@layout/pad_operator" />
+
+        </LinearLayout>
+
+        <include layout="@layout/pad_advanced" />
+
+    </com.android.home.calculator.CalculatorPadViewPager>
 
 </LinearLayout>
