Add alarm clock.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -198,4 +198,5 @@
     <dimen name="card_stream_bottom_padding">90dp</dimen>
     <dimen name="list_item_height">72dp</dimen>
     <dimen name="widget_margin">8dp</dimen>
+    <dimen name="seekbar_label_length">70dp</dimen>
 </resources>
