--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <color name="cardview_initial_background">#71C3DE</color>
+
+
     <!-- Default accent color. -->
     <color name="calculator_accent_color">#0097A7</color>
 
