--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,11 @@
 
     <color name="cardview_initial_background">#71C3DE</color>
 
+    <color name="ampm_off">#ff404040</color>
+    <color name="ampm_on">#ffffffff</color>
+    <color name="white">#ffffffff</color>
+    <color name="red">#ffee0000</color>
+    <color name="ltgrey">#ffe0e0e0</color>
 
     <!-- Default accent color. -->
     <color name="calculator_accent_color">#0097A7</color>
