--- a/app/src/main/res/layout/alarm_time.xml
+++ b/app/src/main/res/layout/alarm_time.xml
@@ -27,18 +27,20 @@
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="30sp"
-                      android:textColor="@color/white"/>
+                      android:textColor="@color/colorPrimary"/>
 
             <LinearLayout android:id="@+id/am_pm"
                           android:layout_width="wrap_content"
                           android:layout_height="match_parent"
                           android:layout_marginLeft="4dip"
+
                           android:orientation="vertical">
 
                 <TextView android:id="@+id/am"
                           android:layout_width="wrap_content"
                           android:layout_height="match_parent"
                           android:gravity="bottom"
+                          android:textColor="@color/colorPrimary"
                           android:layout_weight=".5"
                           android:includeFontPadding="false"
                           android:textSize="12sp"/>
