--- a/app/src/main/res/layout/activity_development.xml
+++ b/app/src/main/res/layout/activity_development.xml
@@ -7,9 +7,9 @@
 
     <LinearLayout
             android:layout_gravity="top"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:gravity="center"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
@@ -24,10 +24,18 @@
                 android:id="@+id/checkBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:text="Scale" />
 
     </LinearLayout>
+
+
+
+    <ListView
+            android:id="@+id/advancedContents"
+            android:layout_marginTop="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <androidx.viewpager.widget.ViewPager
                 android:id="@+id/viewPager"
