--- a/app/src/main/res/layout/card_adapter.xml
+++ b/app/src/main/res/layout/card_adapter.xml
@@ -35,6 +35,7 @@
 
             <Button
                     style="@style/ButtonStyle"
+                    android:id="@+id/cardButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
