--- a/app/src/main/res/layout/basic_sync_adapter.xml
+++ b/app/src/main/res/layout/basic_sync_adapter.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<fragment
-        android:id="@+id/entry_list"
-        android:name="com.android.home.syncadapter.EntryListFragment"
+<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        tools:context=".syncadapter.BasicSyncActivity"
-        tools:layout="@android:layout/list_content"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"/>
+        xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <include layout="@layout/mtoolbar"  />
+
+    <fragment
+            android:id="@+id/entry_list"
+            android:name="com.android.home.syncadapter.EntryListFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            tools:context=".syncadapter.PeopleRssActivity"
+            tools:layout="@android:layout/list_content"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"/>
+
+</LinearLayout>
+
